# Hackathon-Physical-Ai-humaniod-textbook

./: .env  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  requirements.txt  sitemap.xml  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
Root/: index.html
assets/css/: styles.d0f9bc43.css
assets/js/: 009f1e98.6ec06bf0.js  0cf109e1.70b22997.js  41715509.f4cd505c.js  49fae51a.e80a9b89.js  5223c7ec.f6f8df02.js  5494b768.ea7966d3.js  5e95c892.c953d646.js  61b42fb9.c73062ff.js  85be18e3.c2edfe72.js  a7456010.841ee2c1.js  a7bd4aaa.462be056.js  a94703ab.1ca5e2f3.js  c4f5d8e4.22fcd991.js  c4f5d8e4.c48a31e1.js  d16de9df.41f2e629.js  main.0677eec6.js  main.550d5beb.js  main.b30a50da.js  main.c1f027aa.js  main.c597e5b3.js  runtime~main.56b559cc.js  runtime~main.b44e70ce.js
backend/embedding_pipeline/: .env  .env.example  agent.py  debug_agent.py  main.py  pyproject.toml  requirements.txt  retrieving.py  test_agent.py  test_imports.py  test_integration.py
docs/conclusion/: index.html
docs/intro/: index.html
frontendofbook/: .env.example  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontendofbook/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
frontendofbook/docs/: conclusion.md  intro.md
scripts/: deploy.bat  deploy.sh  run_tests.py
specs/001-embedding-pipeline/: data-model.md  (+5 more)
tests/: test_end_to_end.py
(+170 files in other folders)
