[project]
name = "docusaurus-embedding-pipeline"
version = "0.1.0"
description = "Embedding pipeline for Docusaurus documentation with Cohere and Qdrant"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "cohere>=5.11.0",
    "qdrant-client>=1.11.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"